<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	
	<groupId>fr.openwide.core.parents</groupId>
	<artifactId>owsi-core-parent-maven-configuration-common</artifactId>
	<version>0.11.6</version>
	<packaging>pom</packaging>
	
	<name>OWSI Core - Parent - Maven configuration - Common</name>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
		
		<jdk.version>1.8</jdk.version>
		<minimal.jdk.version>1.8</minimal.jdk.version>
		
		<owsi-core.maven-jgitflow-plugin.version>1.0-m5.1</owsi-core.maven-jgitflow-plugin.version>
		<owsi-core.jsch.version>0.1.55</owsi-core.jsch.version>
		<minimal.maven.version>3.2.5</minimal.maven.version>
		
		<generated-sources.directory>target/generated-sources/apt</generated-sources.directory>
		<generated-sources-test.directory>target/generated-sources-test/apt</generated-sources-test.directory>
		
		<owsi-core.maven-compiler-plugin.version>3.5.1</owsi-core.maven-compiler-plugin.version>
		<owsi-core.maven-resources-plugin.version>2.6</owsi-core.maven-resources-plugin.version>
		<owsi-core.maven-surefire-plugin.version>2.19</owsi-core.maven-surefire-plugin.version>
		<owsi-core.maven-install-plugin.version>2.5.1</owsi-core.maven-install-plugin.version>
		<owsi-core.maven-release-plugin.version>2.5.3</owsi-core.maven-release-plugin.version>
		<owsi-core.maven-war-plugin.version>2.4</owsi-core.maven-war-plugin.version>
		<owsi-core.maven-assembly-plugin.version>2.6</owsi-core.maven-assembly-plugin.version>
		<owsi-core.maven-jar-plugin.version>2.4</owsi-core.maven-jar-plugin.version>
		<owsi-core.maven-deploy-plugin.version>2.8.1</owsi-core.maven-deploy-plugin.version>
		<owsi-core.maven-source-plugin.version>2.3</owsi-core.maven-source-plugin.version>
		<owsi-core.maven-javadoc-plugin.version>2.10.3</owsi-core.maven-javadoc-plugin.version>
		<owsi-core.maven-enforcer-plugin.version>1.4.1</owsi-core.maven-enforcer-plugin.version>
		<owsi-core.maven-dependency-plugin.version>2.8</owsi-core.maven-dependency-plugin.version>
		
		<owsi-core.wagon-maven-plugin.version>1.0</owsi-core.wagon-maven-plugin.version>
		<owsi-core.wagon-ssh-external-plugin.version>2.10</owsi-core.wagon-ssh-external-plugin.version>
		
		<owsi-core.maven-processor-plugin.version>2.2.4</owsi-core.maven-processor-plugin.version>
		<owsi-core.maven-yui-compressor-plugin.version>1.5.0</owsi-core.maven-yui-compressor-plugin.version>
		<owsi-core.aspectj-maven-plugin.version>1.4</owsi-core.aspectj-maven-plugin.version>
	</properties>
	
	<prerequisites>
		<maven>${minimal.maven.version}</maven>
	</prerequisites>
	
	<build>
		<plugins>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>${owsi-core.maven-jgitflow-plugin.version}</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<flowInitContext>
						<masterBranchName>master</masterBranchName>
						<developBranchName>dev</developBranchName>
						<featureBranchPrefix>ft-</featureBranchPrefix>
						<releaseBranchPrefix>rl-</releaseBranchPrefix>
						<hotfixBranchPrefix>hf-</hotfixBranchPrefix>
						<versionTagPrefix>v</versionTagPrefix>
					</flowInitContext>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.jcraft</groupId>
						<artifactId>jsch</artifactId>
						<version>${owsi-core.jsch.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${owsi-core.maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<DependencyConvergence />
								<bannedDependencies>
									<excludes>
										<exclude>org.springframework:spring</exclude>
										<exclude>org.springframework:spring-ldap</exclude>
										<exclude>commons-logging:commons-logging</exclude>
										<exclude>cglib:cglib</exclude>
										<exclude>rhino:rhino</exclude>
										<exclude>rhino:js</exclude>
										<exclude>javassist:javassist</exclude>
										<exclude>xml-apis:xml-apis</exclude>
										<exclude>apache-xerces:xml-apis</exclude>
										<exclude>javax.servlet:servlet-api</exclude>
									</excludes>
								</bannedDependencies>
								<requireMavenVersion>
									<version>[${minimal.maven.version},)</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${minimal.jdk.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${owsi-core.maven-compiler-plugin.version}</version>
					<configuration>
						<source>1.7</source>
						<target>${jdk.version}</target>
						<compilerArgument>-proc:none</compilerArgument>
						<testCompilerArgument>-proc:none</testCompilerArgument>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${owsi-core.maven-resources-plugin.version}</version>
					<configuration>
						<!--
						Par défaut, @ est utilisé comme délimiteur et ne peut pas être
						échappé correctement. Historiquement, nous n'avons jamais utilisé
						ces placeholders ; on les supprime donc de la configuration
						Voir MRESOURCES-141
						-->
						<delimiters>
							<delimiter>${*}</delimiter>
						</delimiters>
						<useDefaultDelimiters>false</useDefaultDelimiters>
						<nonFilteredFileExtensions>
							<nonFilteredFileExtension>zip</nonFilteredFileExtension>
							<nonFilteredFileExtension>gz</nonFilteredFileExtension>
							<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
							<nonFilteredFileExtension>xls</nonFilteredFileExtension>
							<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
							<nonFilteredFileExtension>doc</nonFilteredFileExtension>
							<nonFilteredFileExtension>docx</nonFilteredFileExtension>
							<nonFilteredFileExtension>jpg</nonFilteredFileExtension>
							<nonFilteredFileExtension>jpeg</nonFilteredFileExtension>
							<nonFilteredFileExtension>gif</nonFilteredFileExtension>
							<nonFilteredFileExtension>png</nonFilteredFileExtension>
							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
							<nonFilteredFileExtension>psd</nonFilteredFileExtension>
							<nonFilteredFileExtension>ftl</nonFilteredFileExtension>
							<!-- Fichier de licence Alfresco -->
							<nonFilteredFileExtension>lic</nonFilteredFileExtension>
						</nonFilteredFileExtensions>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${owsi-core.maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${owsi-core.maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${owsi-core.maven-war-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${owsi-core.maven-install-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${owsi-core.maven-release-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${owsi-core.maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${owsi-core.maven-deploy-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${owsi-core.maven-source-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${owsi-core.maven-javadoc-plugin.version}</version>
					<configuration>
						<additionalparam>-Xdoclint:none</additionalparam>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.bsc.maven</groupId>
					<artifactId>maven-processor-plugin</artifactId>
					<version>${owsi-core.maven-processor-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${owsi-core.maven-dependency-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>yuicompressor-maven-plugin</artifactId>
					<version>${owsi-core.maven-yui-compressor-plugin.version}</version>
					<executions>
						<execution>
							<id>default</id>
							<goals>
								<goal>compress</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<includes>
							<include>**/*.css</include>
							<include>**/*.js</include>
						</includes>
						<suffix>.min</suffix>
						<linebreakpos>10000</linebreakpos>
						<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>wagon-maven-plugin</artifactId>
					<version>${owsi-core.wagon-maven-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.wagon</groupId>
							<artifactId>wagon-ssh-external</artifactId>
							<version>${owsi-core.wagon-ssh-external-plugin.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				
				<!--
				This plugin's configuration is used to skip plugin executions in Eclipse m2e only.
				It has no influence on the Maven build itself.
				It has no influence when running goals explicitely (as a Run Configuration) from Eclipse, either.
				-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>net.alchim31.maven</groupId>
										<artifactId>yuicompressor-maven-plugin</artifactId>
										<versionRange>[1.2,)</versionRange>
										<goals>
											<goal>compress</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<profiles>
		<profile>
			<activation>
				<property>
					<name>distribution</name>
					<value>owsi-core-release</value>
				</property>
			</activation>
			<distributionManagement>
				<repository>
					<id>nexus-igloo-releases</id>
					<name>Nexus OWSI Core</name>
					<url>https://nexus.tools.kobalt.fr/repository/igloo-releases/</url>
				</repository>
		
				<snapshotRepository>
					<id>nexus-igloo-snapshots</id>
					<name>Nexus OWSI Core Snapshots</name>
					<url>https://nexus.tools.kobalt.fr/repository/igloo-snapshots/</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
	</profiles>
	
</project>
